[cs-ui] CSList - fixed hover on list item overlaping with focus state on header

--- a/cs-ui-components/src/sass/components/_cs-list.scss
+++ b/cs-ui-components/src/sass/components/_cs-list.scss
@@ -35,6 +35,8 @@
 						outline: 0;
 					}
 					&:active {
+						z-index: var(--z-index-list-active);
+
 						@include css4 {
 							box-shadow: 0 0 3px cvar(--cs-list-item-header-box);
 						}
