--- a/cs-ui-components/src/sass/settings/_z-index.scss
+++ b/cs-ui-components/src/sass/settings/_z-index.scss
@@ -7,6 +7,7 @@
 	--z-index-progress-indicator: 1;
 	--z-index-transfer-list-item-focus: 1;
 	--z-index-sidebar-visible-wrapper: 1;
+	--z-index-list-active: 1;
 	--z-index-button-focus: 2;
 	--z-index-button-icon: 2;
 	--z-index-button-label: 2;
